--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,2 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="998b7c">  <td>21/08/17 01:33:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterTest()[pri:0, instance:domesticHotel.RunnerDomesticHotel@2353b3e6]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@1256728724</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/08/17 01:32:58</td>   <td>-26442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeTest()[pri:0, instance:domesticHotel.RunnerDomesticHotel@2353b3e6]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@1256728724</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/08/17 01:33:04</td>   <td>-20301</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RunnerDomesticHotel.hotels(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:domesticHotel.RunnerDomesticHotel@2353b3e6]">hotels</td> 
+  <td>main@1256728724</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/08/17 01:33:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterTest()[pri:0, instance:domesticHotel.RunnerDomesticHotel@2353b3e6]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@1256728724</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/08/17 01:33:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterTest()[pri:0, instance:domesticHotel.RunnerDomesticHotel@2353b3e6]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@1256728724</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/08/17 01:32:58</td>   <td>-26442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeTest()[pri:0, instance:domesticHotel.RunnerDomesticHotel@2353b3e6]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@1256728724</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/08/17 01:33:04</td>   <td>-20301</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RunnerDomesticHotel.hotels(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:domesticHotel.RunnerDomesticHotel@2353b3e6]">hotels</td> 
+  <td>main@1256728724</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/08/17 01:32:58</td>   <td>-26442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeTest()[pri:0, instance:domesticHotel.RunnerDomesticHotel@2353b3e6]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@1256728724</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/08/17 01:33:04</td>   <td>-20301</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RunnerDomesticHotel.hotels(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:domesticHotel.RunnerDomesticHotel@2353b3e6]">hotels</td> 
+  <td>main@1256728724</td>   <td></td> </tr>
 </table>
